create oauth 2.0 with github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#Logging with github
+spring.security.oauth2.client.registration.github.client-id=60e1c73e4358053f3059
+spring.security.oauth2.client.registration.github.client-secret=b89a149163649e2ce301687a17fb4c06806a7e8a
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -7,3 +11,4 @@ spring.datasource.username=postgres
 spring.datasource.password=1111
 server.port=8081
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
